# hw_4

./: .gitignore  CMakeLists.txt  Doxyfile
.github/workflows/: release.yml
include/: print_ip.hpp
src/: main.cpp
tests/: tests.cpp
tests/Tests/: Tests.vcxproj  Tests.vcxproj.filters
tests/Tests/x64/Debug/: Tests.exe.recipe  vc145.idb
tests/Tests/x64/Debug/Tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Tests.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
